2010-07-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* tar01/Makefile.am, tar02/Makefile.am: Fix dependencies for parallel
	build.

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: Replace mkdir cascade
	with $(MKDIR_P).

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: Misc. fixes.

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar03/Makefile.am: Remove MANAGERS.

2010-07-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1532/testing
	* Makefile.am, configure.ac: Add initial tests for untar capabilities.
	* tar01/.cvsignore, tar01/Makefile.am, tar01/init.c, tar01/tar01.doc,
	tar01/tar01.scn, tar02/.cvsignore, tar02/Makefile.am, tar02/init.c,
	tar02/tar02.doc, tar02/tar02.scn: New files.

2010-07-27	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1631/testing
	* gxx02/init.c, gxx02/gxx02.scn, gxx02/gxx02.doc,
	gxx02/Makefile.am, gxx02/gxx_wrappers.h: New test added
	* Makefile.am, configure.ac: Changes to accommodate new tests

2010-07-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1632/testing
	* Makefile.am, configure.ac: Make dedicated fatal error test for
	/dev/null already registered. Using code from Bharath in new test
	framework.
	* devnullfatal01/.cvsignore, devnullfatal01/Makefile.am,
	devnullfatal01/devnullfatal01.doc, devnullfatal01/devnullfatal01.scn,
	devnullfatal01/testcase.h: New files.

2010-07-27	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1632/testing
	* devfs04/init.c, devfs04/test_driver.c: Added cases to exercise
	null_initialize() and null_write().

2010-07-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* gxx01/gxx01.scn, gxx01/init.c: Remove local _exit().

2010-07-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* gxx01/gxx01.scn, gxx01/init.c: Add test f0r rtems_gxx_key_dtor().

2010-07-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* gxx01/gxx01.scn, gxx01/init.c: Add more testcases.
