@@ -1,3 +1,9 @@
+2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* tar01/Makefile.am, tar02/Makefile.am: 
+	Eliminate stamp-fs-tar. Reorder CLEANFILES.
+	Apply BIN2C -C/-H.
+
 2010-07-29	Joel Sherrill <joel.sherrilL@OARcorp.com>
 
 	* tar01/Makefile.am, tar02/Makefile.am: Fix dependencies for parallel
